Rename JSON into Json.